--- a/To_Do_List/Dockerfile
+++ b/To_Do_List/Dockerfile
@@ -1,14 +1,9 @@
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-COPY . .
-RUN npm run build
-
-
 FROM nginx:latest
+
 COPY nginx.conf /etc/nginx/nginx.conf
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=builder /app/dist/untitled/browser/ /usr/share/nginx/html/
+
+COPY ./dist/untitled/browser/ /usr/share/nginx/html/
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
