--- a/To_Do_List_Backend/Dockerfile
+++ b/To_Do_List_Backend/Dockerfile
@@ -3,13 +3,12 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci --only=production --no-audit --no-fund
 
 COPY src/ ./src/
 
-# Créer le répertoire pour les données
 RUN mkdir -p /app/data
 
 EXPOSE 3001
 
-CMD ["npm", "start"]
+CMD ["node", "src/app.js"]
