--- a/To_Do_List/Jenkinsfile
+++ b/To_Do_List/Jenkinsfile
@@ -1,17 +1,9 @@
 pipeline {
-  agent {
-    docker {
-      image 'node:20-alpine'
-    }
-  }
+  agent { label 'frontend' }
 
     parameters {
-    string(name: 'IMAGE_NAME', defaultValue: 'todo-frontend')
+    string(name: 'IMAGE_NAME', defaultValue: 'todo-frontend:latest')
         string(name: 'NETWORK_NAME', defaultValue: 'todo-network')
-    }
-
-    environment {
-    IMAGE_TAG = "${params.IMAGE_NAME}:latest"
     }
 
     stages {
@@ -26,11 +18,7 @@ pipeline {
         stage('Build & Test') {
       steps {
         dir('To_Do_List') {
-          sh '''
-                    npm ci
-                    npm run build
 
-                    '''
                 }
             }
         }
@@ -38,9 +26,18 @@ pipeline {
         stage('Build Docker Image') {
       steps {
         dir('To_Do_List') {
-          sh "docker build -t ${IMAGE_TAG} ."
+          sh "docker build -t ${params.IMAGE_NAME} ."
                 }
             }
+        }
+    }
+
+    post {
+    success {
+      echo "Frontend build terminé avec succès !"
+        }
+        failure {
+      echo "Frontend build échoué."
         }
     }
 }
