--- a/To_Do_List_Backend/Jenkinsfile
+++ b/To_Do_List_Backend/Jenkinsfile
@@ -1,45 +1,43 @@
 pipeline {
-	agent {
-		docker {
-			image 'node:20-alpine'
+	agent { label 'backend' }
+
+    parameters {
+		string(name: 'IMAGE_NAME', defaultValue: 'todo-backend:latest')
+        string(name: 'NETWORK_NAME', defaultValue: 'todo-network')
     }
-  }
 
-  parameters {
-		string(name: 'IMAGE_NAME', defaultValue: 'todo-backend')
-    string(name: 'NETWORK_NAME', defaultValue: 'todo-network')
-  }
-
-  environment {
-		IMAGE_TAG = "${params.IMAGE_NAME}:latest"
-  }
-
-  stages {
+    stages {
 		stage('Checkout') {
 			steps {
 				dir('To_Do_List_Backend') {
 					checkout scm
+                }
+            }
         }
-      }
-    }
 
-    stage('Build & Test') {
+        stage('Build & Test') {
 			steps {
 				dir('To_Do_List_Backend') {
-					sh '''
-            npm ci --only=production
-            npm test || true
-          '''
-        }
-      }
-    }
 
-    stage('Build Docker Image') {
+                }
+            }
+        }
+
+        stage('Build Docker Image') {
 			steps {
 				dir('To_Do_List_Backend') {
-					sh "docker build -t ${IMAGE_TAG} ."
+					sh "docker build -t ${params.IMAGE_NAME} ."
+                }
+            }
         }
-      }
     }
-  }
+
+    post {
+		success {
+			echo "Backend build terminé avec succès !"
+        }
+        failure {
+			echo "Backend build échoué."
+        }
+    }
 }
