--- a/To_Do_List/Jenkinsfile
+++ b/To_Do_List/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
   agent {
     kubernetes {
       label 'jenkins-frontend'
+      defaultContainer 'helm'
       namespace 'default'
       serviceAccount 'jenkins-deployer'
     }
