--- a/charts/backend-chart/values.yaml
+++ b/charts/backend-chart/values.yaml
@@ -13,11 +13,8 @@ app:
 
 # Service Account configuration
 serviceAccount:
-  # Specifies whether a service account should be created
   create: false
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: "jenkins"
+  name: default
   # Annotations to add to the service account
   annotations: {}
 
