--- a/charts/frontend-chart/values.yaml
+++ b/charts/frontend-chart/values.yaml
@@ -17,7 +17,7 @@ serviceAccount:
   create: false
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: default
+  name: jenkins-deployer
   # Annotations to add to the service account
   annotations: {}
 
