--- a/charts/frontend-chart/values.yaml
+++ b/charts/frontend-chart/values.yaml
@@ -39,6 +39,14 @@ deployment:
       cpu: 250m
       memory: 256Mi
 
+
+persistence:
+  enabled: true
+  storageClass: ""
+  accessMode: ReadWriteOnce
+  size: 1Gi
+
+
 # Ingress configuration (optional)
 ingress:
   enabled: false
