--- a/charts/backend-chart/values.yaml
+++ b/charts/backend-chart/values.yaml
@@ -4,9 +4,9 @@
 app:
   name: todo-backend
   image:
-    repository: todo-backend
+    repository: inestmimi123/todo-backend
     tag: latest
-    pullPolicy: IfNotPresent
+
   
   port: 3000
   targetPort: 3000
